# log-analysis-system

./: .gitignore  Cargo.toml
filebeat_restful/: Cargo.toml  Dockerfile  docker-compose.yml  start.sh
filebeat_restful/confg/: log.yaml
filebeat_restful/config/: log.yaml
filebeat_restful/config/filebeat/: filebeat.yml
filebeat_restful/config/filebeat/inputs.d/: log.yml
filebeat_restful/filebeat/: filebeat.yml
filebeat_restful/filebeat/inputs.d/: log.yml
filebeat_restful/src/: main.rs  modify_filebeat_yaml.rs  system_cmd.rs  websocket.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: ContextDisplay.js  DateRangePicker.js  FilterForUpload.js  LogFileOperation.js  LogSearch.css  LogSearch.js  SelectLogFile.js
logs_filter/: Cargo.toml  Dockerfile  docker-compose.yml  docker-compose.yml.bak.yml  start.sh
logs_filter/config/: config.yaml
logs_filter/logstash-docker/: jvm.options  logstash.conf  logstash.yml
logs_filter/src/: config.rs  main.rs
logs_filter/src/routes/: context.rs  discover_node.rs  get_indices.rs  keyword_search.rs  logstash_noty.rs  mod.rs  search.rs  unique_services.rs
src/: main.rs
src/routes/: context.rs  get_indices.rs  mod.rs  unique_services.rs
