[package]
name = "log-analysis-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"

elasticsearch = "8.16.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
futures = "0.3.31"
reqwest = "0.12.12"
bytes = "1.9.0"
