[package]
name = "filebeat_restful"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
async-tungstenite = { version = "0.28.2", features = ["tokio-runtime"] }
futures-util = "0.3.31"
futures = "0.3.31"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"  # Add this line to include serde_json
serde_yaml = "0.9.34+deprecated"
async-std = "1.13.0"
