[package]
name = "logs_filter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-tungstenite = { version = "0.28.2", features = ["tokio-runtime"] }

actix-cors = "0.7.0"
elasticsearch = "8.16.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
futures = "0.3.31"
reqwest = "0.12.12"
bytes = "1.9.0"
futures-util = "0.3.31"
tokio-util = { version = "0.7.13", features = ["compat"] }
async-std = "1.13.0"
